--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
       <button id="calculate" class="calculate-btn">Calculate Results</button>
     </section>
 
+  <!-- Accessibility: live region for announcements -->
+  <div id="announcer" aria-live="polite" aria-atomic="true" class="visually-hidden"></div>
+
     <!-- Results -->
     <section id="results" class="results hidden">
   <div class="completion-summary"><p id="summaryText"></p></div>
