New name and drag icon goes away

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Seattle Marathon Predictor</title>
+  <title>Finish Line Forecast (Seattle Marathon)</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
@@ -14,7 +14,7 @@
 <body>
   <main class="app-container">
     <header class="app-header">
-      <h1>Seattle Marathon Predictor</h1>
+      <h1>Finish Line Forecast (Seattle Marathon)</h1>
       <p class="subheader">See how you’d perform compared to last year’s results.</p>
     </header>
 
